[gd_scene load_steps=6 format=3 uid="uid://bcxdvv4qwwmqm"]

[ext_resource type="Script" path="res://src/perry_says/perry_says.gd" id="1_fdqsf"]
[ext_resource type="PackedScene" uid="uid://b0e3falqlw7c6" path="res://src/main/game_background.tscn" id="2_0t6vh"]
[ext_resource type="Texture2D" uid="uid://c67eolerebque" path="res://textures/perry_says/simonsays_background_128.png" id="2_8tja7"]
[ext_resource type="Script" path="res://src/perry_says/playback_timer.gd" id="3_nsfda"]
[ext_resource type="PackedScene" uid="uid://d2enwj4xxpx4q" path="res://src/perry_says/perry_button.tscn" id="3_o4idv"]

[node name="PerrySays" type="Node2D"]
script = ExtResource("1_fdqsf")
metadata/_edit_vertical_guides_ = [360.0]
metadata/_edit_horizontal_guides_ = [-640.0]

[node name="GameBackground" parent="." instance=ExtResource("2_0t6vh")]
game_background_texture = ExtResource("2_8tja7")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(360, 640)

[node name="PlaybackTimer" type="Timer" parent="."]
unique_name_in_owner = true
script = ExtResource("3_nsfda")

[node name="Buttons" type="Node2D" parent="."]
unique_name_in_owner = true

[node name="PerryButton" parent="Buttons" instance=ExtResource("3_o4idv")]
position = Vector2(104, 432)

[node name="PerryButton2" parent="Buttons" instance=ExtResource("3_o4idv")]
position = Vector2(360, 432)

[node name="PerryButton3" parent="Buttons" instance=ExtResource("3_o4idv")]
position = Vector2(104, 688)

[node name="PerryButton4" parent="Buttons" instance=ExtResource("3_o4idv")]
position = Vector2(360, 688)

[node name="PerryButton5" parent="Buttons" instance=ExtResource("3_o4idv")]
position = Vector2(40, 176)

[node name="PerryButton6" parent="Buttons" instance=ExtResource("3_o4idv")]
position = Vector2(424, 176)

[node name="PerryButton7" parent="Buttons" instance=ExtResource("3_o4idv")]
position = Vector2(40, 944)

[node name="PerryButton8" parent="Buttons" instance=ExtResource("3_o4idv")]
position = Vector2(424, 944)

[connection signal="timeout" from="PlaybackTimer" to="." method="_on_playback_timer_timeout"]
[connection signal="ready" from="Buttons" to="." method="_on_buttons_ready"]
